<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgournd"
    tools:context=".assignment3.signup3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="404dp"
            android:layout_height="146dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/cat"
            android:contentDescription="@string/profile_picture" />

        <TextView
            android:id="@+id/thankYouTextView"
            android:layout_width="374dp"
            android:layout_height="7dp"
            android:lines="2"
            android:textAlignment="center"
            android:textColor="#5B0AEC"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Fname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ages"
                android:inputType="number" />
            <EditText
                android:id="@+id/emailadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress" />



            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:lines="4" />

            <EditText
                android:id="@+id/occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/occupation"
                android:inputType="textAutoCorrect" />

            <Button
                android:id="@+id/create_profile"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:insetLeft="60dp"
                android:insetRight="60dp"
                android:text="@string/sign_up" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>