<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgournd"
    tools:context=".assignment3.Profile3_Activity">

    <ImageView
        android:id="@+id/profile_image2"
        android:layout_width="182dp"
        android:layout_height="137dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        tools:srcCompat="@drawable/p1"
        android:contentDescription="@string/profile_picture21" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="388dp"
        android:text="@string/profile_name2"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image2"
        app:layout_constraintVertical_bias="0.388" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dip"
        android:text="@string/description_her"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name"
        app:layout_constraintVertical_bias="0.014"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/profile_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_18_yer"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toEndOf="@+id/profile_ageLabel"
        app:layout_constraintTop_toBottomOf="@+id/profile_description"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/profile_occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teaching"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toEndOf="@+id/profile_occupationLabel"
        app:layout_constraintTop_toBottomOf="@+id/profile_ageLabel"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/profile_ageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age2"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_description"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/profile_occupationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation2"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="italic"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_ageLabel"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/profile_backBtn"
        android:layout_width="186dp"
        android:layout_height="61dp"
        android:layout_marginBottom="100dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>