<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/pictures"
                android:src="@drawable/ic_launcher_background" />
            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/name"
                android:textSize="22sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/LIKE" />

        </LinearLayout>




    </androidx.cardview.widget.CardView>

</RelativeLayout>